--- a/gb/21/1/18/n12696159.md
+++ b/gb/21/1/18/n12696159.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bmcukq391/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bmcukq391/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bmcukq391/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bmcukq391/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bmcukq391/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bmcukq391/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bmcukq391/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bmcukq391/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bmcukq391/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bmcukq391/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bmcukq391/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bmcukq391/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bmcukq391/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bmcukq391/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bmcukq391/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bmcukq391/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bmcukq391/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bmcukq391/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bmcukq391/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bmcukq391/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bmcukq391/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bmcukq391/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bmcukq391/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bmcukq391/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【役情最前线】拜登就职如临大敌</h2>
-<a href="https://git.io/JtL2z"><img width="600" src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/bmcukq391/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2rq98et8nmaey.cloudfront.net/I8e2NaW4a"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>抗共挺台，蓬佩奥连发数十帖文；英外相：不应与侵犯人权国谈自贸；美史上最不寻常的总统就职典礼；贺锦丽最后一刻辞参议员。（大纪元香港新闻中心）
 </h6>
 <hr>
-	<p>【大纪元2021年01月19日讯】（大纪元香港新闻中心报导）美国将举行史上最不寻常的总统就职典礼；美联社：<ahref="https://github.com/bmcukq391/djy/blob/master/gb/tag/%E8%B4%BA%E9%94%A6%E4%B8%BD.md#1">贺锦丽</a>将辞去参议员职务；<ahref="https://github.com/bmcukq391/djy/blob/master/gb/tag/%E8%93%AC%E4%BD%A9%E5%A5%A5.md#1">蓬佩奥</a>发数十帖文抗共挺台；剑指中共！英外相：不应与侵犯人权国谈自贸；大疫下，看<ahref="https://github.com/bmcukq391/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>在海峡两岸强烈对比；中国制洗手液不能杀菌又含毒，英国紧急召回；大陆核酸检测造假曝光，四川悬赏抓捕非法入境者。</p>
-<p><a src=""></a><a href="https://git.io/JtL2z"><img width="600" src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/bmcukq391/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/fl-rFtidxOc" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+	<p>【大纪元2021年01月19日讯】（大纪元香港新闻中心报导）美国将举行史上最不寻常的总统就职典礼；美联社：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B4%BA%E9%94%A6%E4%B8%BD.md#1">贺锦丽</a>将辞去参议员职务；<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%93%AC%E4%BD%A9%E5%A5%A5.md#1">蓬佩奥</a>发数十帖文抗共挺台；剑指中共！英外相：不应与侵犯人权国谈自贸；大疫下，看<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>在海峡两岸强烈对比；中国制洗手液不能杀菌又含毒，英国紧急召回；大陆核酸检测造假曝光，四川悬赏抓捕非法入境者。</p>
+<p><a src=""></a><a href="https://d2rq98et8nmaey.cloudfront.net/I8e2NaW4a"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/fl-rFtidxOc" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>美国将举行史上最不寻常的总统就职典礼</h2>
 <p>美国当选总统拜登将于1月20日在空前的安保措施和疫情封锁中宣誓就职，这也是美国历史上最不寻常的就职典礼之一。</p>
 <p>与许多前任总统一样，拜登要在国会大厦的台阶上宣誓。然而，通常会吸引数十万美国人的宾夕凡尼亚大道传统游行已被取消，取而代之的是一场虚拟游行。就职典礼的舞会也被取消了。</p>
@@ -17,16 +17,16 @@
 <p>皮特鲁萨说，但历史上发生过一些例子，事情也没有照计划进行，并不那么一帆风顺。</p>
 <p>根据这位历史学家的说法，林肯的第一次就职，是史上最紧张的一次，空气中更弥漫着战争即将发生的氛围。在他的就职演说六周后，夺走约2%美国人口的南北战争爆发了。</p>
 <p>皮特鲁萨说：“当然，1861年林肯就职时，国家的状况更糟糕，人们更紧张。这一点是无法相比的。”</p>
-<p>他指出，虽然内战前的安全维护是个大问题，但今年为准备<ahref="https://github.com/bmcukq391/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB%E5%B0%B1%E8%81%8C.md#1">拜登就职</a>而采取的措施，也是前所未有的。</p>
+<p>他指出，虽然内战前的安全维护是个大问题，但今年为准备<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB%E5%B0%B1%E8%81%8C.md#1">拜登就职</a>而采取的措施，也是前所未有的。</p>
 <p>在国会认证拜登为2020年大选获胜者的一天之后，美国总统川普公布消息，他不会出席拜登的宣誓仪式。</p>
-<h2>美联社：<ahref="https://github.com/bmcukq391/djy/blob/master/gb/tag/%E8%B4%BA%E9%94%A6%E4%B8%BD.md#1">贺锦丽</a>周一将辞去参议员职务</h2>
+<h2>美联社：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B4%BA%E9%94%A6%E4%B8%BD.md#1">贺锦丽</a>周一将辞去参议员职务</h2>
 <p>据美联社（AP）报导，美国当选副总统贺锦丽将于1月18日，即总统就职典礼的前两天，辞去其加州联邦参议员职务。</p>
 <p>报导称，贺锦丽的助手们确认了她即将辞去参议院职位的时间，并说加州州长知道她的决定，且为任命她的接替者扫清了障碍。</p>
 <p>贺锦丽的辞职决定可谓姗姗来迟。拜登早在11月7日就宣布自己胜选第46任美国总统，而他的竞选搭档、副总统候选人贺锦丽却迟迟不肯辞去其参议员职务，成为美国历史上当选后最晚宣布辞去现任公职的候任总统或副总统之一。</p>
 <p>早在去年12月22日，加州州长就已宣布，任命该州州务卿填补贺锦丽的国会参议员席位。不过，尽管当时各州的选举人投票已经结束，但由于针对拜登当选存在巨大争议，所以贺锦丽并未给出她的辞职日期。</p>
 <p>贺锦丽此后也在辞参议员问题上一推再推、直至就职典礼的前两天才放出消息，这种情况在美国历史上极其罕见。</p>
 <p>外界评析，贺锦丽此前显然对自己是否能顺利上任心存疑虑，因此才有这种非同寻常的表现。</p>
-<h2><ahref="https://github.com/bmcukq391/djy/blob/master/gb/tag/%E8%93%AC%E4%BD%A9%E5%A5%A5.md#1">蓬佩奥</a>发数十贴文抗共挺台</h2>
+<h2><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%93%AC%E4%BD%A9%E5%A5%A5.md#1">蓬佩奥</a>发数十贴文抗共挺台</h2>
 <p>美国国务卿蓬佩奥在16、17日两天，连发数十篇推文，写出川普政府在对抗中共方面的外交成果，多篇推文直指中共。</p>
 <p>蓬佩奥写道，“中国共产党是我们这个时代的核心威胁。中共的威权主义不是自由世界想要的未来，但如果我们放下戒心，我们的未来就会是这样。”</p>
 <p>蓬佩奥表示，在中共议题上，川普政府改变了全球各国的谈话内容。“我们曝光了中国共产党对自由世界的敌意，并建立了联盟，抵挡北京的不良行为。”</p>
@@ -44,7 +44,7 @@
 <p>上周12日，蓝韬文在国会发言时表示，联合国估计新疆有至少100万维吾尔人被中共关在所谓的再教育营，有证据显示，维吾尔族穆斯林遭强迫劳动。</p>
 <p>他表示，这是“真正可怕的野蛮行径”，英国不会支持任何违反人权的行为。</p>
 <p>据报导，英国正在考虑对参与侵犯人权的五名中共官员实施《马格尼茨基法案》制裁。英国议会下议院的两个专门委员会，正在调查新疆强迫劳动问题。</p>
-<h2>大疫下 看<ahref="https://github.com/bmcukq391/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>在海峡两岸强烈对比</h2>
+<h2>大疫下 看<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>在海峡两岸强烈对比</h2>
 <p>2020年初，中共病毒在全球爆发。和大陆只有一水之隔的台湾，确诊人数一直相对较低。台湾法轮功学员和往年一样，在2020年5月、7月、12月，举行年度大型集会、炼功活动。场面壮观，令人赞叹。</p>
 <p>2021年1月16日，台湾台北法轮功学员在自由广场前集体炼功。</p>
 <p>疫情中的台北，虽然没有往日的热闹，但法轮功学员的炼功场面祥和美好，能量场强大，获得民众赞誉。</p>
@@ -76,42 +76,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bmcukq391/djy/blob/master/gb/21/1/13/n12686013.md#1">【役情最前线】习再提大变局 “八常委”齐亮相</a></li>
-<li><a href="https://github.com/bmcukq391/djy/blob/master/gb/21/1/14/n12688588.md#1">【役情最前线】病毒源自共军实验？川普或解密</a></li>
-<li><a href="https://github.com/bmcukq391/djy/blob/master/gb/21/1/15/n12691168.md#1">【役情最前线】疫苗高层现离职潮 中国首富跳船</a></li>
-<li><a href="https://github.com/bmcukq391/djy/blob/master/gb/21/1/17/n12693977.md#1">【役情最前线】武汉爆疫情前 病毒所人员已染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/13/n12686013.md#1">【役情最前线】习再提大变局 “八常委”齐亮相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/14/n12688588.md#1">【役情最前线】病毒源自共军实验？川普或解密</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/15/n12691168.md#1">【役情最前线】疫苗高层现离职潮 中国首富跳船</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/17/n12693977.md#1">【役情最前线】武汉爆疫情前 病毒所人员已染疫</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/4/n10361532.md#1" target="_blank">周晓辉：恩格斯资助马克思并为其顶包背后</a></li><li><a href="https://github.com/bmcukq391/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/14/n11111708.md#1" target="_blank">美国务院人权新报告 多次提中共迫害法轮功</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/7/n10835148.md#1" target="_blank">中华传统文化之叹——消逝的城墙（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245419.md#1" target="_blank">长夜尽头 一缕金色的彩霞</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/13/n12684593.md#1">美国CIA解密大量UFO文件 网上可下载</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/20/9/29/n12439101.md#1">四岁儿子对妈妈说：我死过一次 很痛！</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/20/12/30/n12653733.md#1">【命理】有无富贵命怎看 二举人求功名为何丧命？</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691126.md#1">【有冇搞错】马斯克建议人类“爱和宽容”</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/2/n12662075.md#1">敬称“伉俪”与“贤伉俪”怎么区别应用？</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691202.md#1">【时事军事】三角洲9队揭秘 剑指中俄太空武器</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/18/n12695483.md#1">【珍言真语】厨房佬：青关会人就是政棍和间谍</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/17/n12692894.md#1">【横河直播】病毒起源核查 世卫能做什么</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/16/n12692722.md#1">中国疫情严重 河北廊坊等地出现“随地倒”</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691080.md#1">刘嘉玲晒照为弟媳庆生 亿万财产或由侄子继承</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691475.md#1">蚂蚁集团成立整改组 马云被指服软认错了</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691080.md#1">刘嘉玲晒照为弟媳庆生 亿万财产或由侄子继承</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691267.md#1">余苑绮少外食戒油炸仍罹癌 营养师点出关键</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691425.md#1">59岁张学友近况曝光 胡须斑白双颊凹陷</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/17/n12693952.md#1">杜汶泽调侃周杰伦身材发福 一张对比图引热议</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/16/n12691628.md#1">《末日激战》影评：机器人元素 让核武危机更有看点</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/16/n12691636.md#1">【重播】洛杉矶停尸房告急 美国新变种严重吗？</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/18/n12694940.md#1">庚子年当选美国总统都在任内去世 网民热议</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/14/n12688783.md#1">森林浴舒压又抗癌 实证3大疗愈功效</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/17/n12693215.md#1">“我不要治疗只要去台湾”马克杯网上出售</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/18/n12695168.md#1">美国空姐告诫 在飞机上千万别用这些东西</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bmcukq391/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bmcukq391/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/18/n12696159.htm">【役情最前线】拜登就职如临大敌</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/18/n12696159.htm">【役情最前线】拜登就职如临大敌</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bmcukq391/djy/blob/master/gb/21/1/18/n12696159.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bmcukq391/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bmcukq391/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bmcukq391/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bmcukq391/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmcukq391/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/1/18/n12696159.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
